Fixed layout issue

--- a/src/components/ValidatorPowerPercentBar/ValidatorPowerPercentBar.less
+++ b/src/components/ValidatorPowerPercentBar/ValidatorPowerPercentBar.less
@@ -1,10 +1,12 @@
-.ant-progress-success-bg {
-  background-color: #bfdffa;
-}
+.validator-power-percent-bar {
+  .ant-progress-success-bg {
+    background-color: #bfdffa;
+  }
 
-.ant-progress-inner,
-.ant-progress-bg,
-.ant-progress-success-bg {
-  height: 22px !important;
-  border-radius: 0;
+  .ant-progress-inner,
+  .ant-progress-bg,
+  .ant-progress-success-bg {
+    height: 22px !important;
+    border-radius: 0;
+  }
 }
