--- a/src/pages/staking/staking.less
+++ b/src/pages/staking/staking.less
@@ -59,6 +59,9 @@
     // display: inline-block;
     .ant-modal-body {
       padding: 32px 32px 0 32px;
+      .ant-table {
+        overflow: auto;
+      }
     }
     .ant-modal-footer {
       display: none;
